# DeepAIGo

./: .gitignore  CMakeLists.txt  README.md
AIGo_Gtp/: CMakeLists.txt  main.cc
Converter/: CMakeLists.txt  Converter.cc  Converter.h  main.cc
DeepAIGo/: CMakeLists.txt  Config.h
DeepAIGo/board/: Board.cc  Board.h  Common.h
DeepAIGo/gtp/: AIGoGtp.cc  AIGoGtp.h  GtpEngine.cc  GtpEngine.h
DeepAIGo/io/: SgfParser.cc  SgfParser.h
DeepAIGo/mcts/: MCTSEngine.cc  MCTSEngine.h  TreeNode.cc  TreeNode.h
DeepAIGo/net/: PolicyNet.cc  PolicyNet.h  ValueNet.cc  ValueNet.h  helper.cc  helper.h
DeepAIGo/pattern/: pattern.cc  pattern.h
DeepAIGo/preprocess/: Preprocess.cc  Preprocess.h  Symmetrics.cc  Symmetrics.h
PatternHarvest/: CMakeLists.txt  main.cc
SLPolicy/: CMakeLists.txt  HDF5Provider.cc  HDF5Provider.h  HDF5Provider.jl  PolicyTrainer.cc  PolicyTrainer.h  SLPolicy.jl  helper.jl  main.cc  policy.jl
Test_Board/: CMakeLists.txt  main.cc
Test_MCTS/: CMakeLists.txt  main.cc
Test_Preprocess/: CMakeLists.txt  main.cc
Test_SGFParser/: CMakeLists.txt  main.cc
Test_Symmetrics/: CMakeLists.txt  main.cc
Test_TTScore/: CMakeLists.txt  main.cc
